fixed issue where users could scroll body elements behind active overlay

--- a/imports/client/styles/components/_header.scss
+++ b/imports/client/styles/components/_header.scss
@@ -237,10 +237,10 @@
   }
 }
 
-.is-navigation-open body, .is-menu-open body {
-  overflow: hidden;
-}
-
 .is-navigation-open .header__admin-menu-icon, .is-menu-open .header__navigation-menu-icon {
   visibility: hidden;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
